2006-08-07  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : remainder of new API massaging for existing 
	types.
	* gtk/Printer.custom : new static method.
	* gtk/TextBuffer.custom : serialization API implementations.

2006-08-07  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : mark an out param in Style.LookupColor. 
	Some tweaks to duplicated label api.

2006-08-07  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : markup for new Clipboard Rich text funcs. 
	* gtk/Clipboard.custom : manually implement RequestRichText and
	WaitForRichText methods to deal with array marshaling and delegate
	persistence.

2006-08-04  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : a few tweaks to the 2.10 API found in doc/
	audit pass.

2006-08-04  Mike Kestner  <mkestner@novell.com>

	* gdk/Screen.custom : manually implement FontOptions property so
	we can use reflection to access the internal Mono.Cairo ctor.
	* gdk/Gdk.metadata : list marshaling, method-to-property renames,
	and some hides form manual implementation.  Hide 
	gdk_atom_intern_static_string wrapper since it is pointless outside
	the context of C code.

2006-08-03  Mike Kestner  <mkestner@novell.com>

	* pango/pango-api-2.10.raw : regen for 1.12.x
	* sources/Makefile.am : use pango-1.12.3 for parse
	* sources/gtk-sharp-2.10-sources.xml : ditto

2006-08-01  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : fix a couple of compat breaks against 2.8.
	* gtk/TreeModelFilter.cs : hand implement ConvertChildIterToIter
	to match the 2.8 version of the method.

2006-08-01  Mike Kestner  <mkestner@novell.com>

	* gtk/gtk-api-2.10.raw : reparsed
	* parser/gapi_pp.pl : put a newline after G_DEFINE_TYPE macros
	on the output and do a next if we shouldn't fall out of the 
	branch.

2006-07-29  Alp Toker  <alp@atoker.com>

	* sample/GstPlayer.cs: Remove the 2002 GStreamer sample. gst-sharp has
	long since found a new home.

2006-07-28  Mike Kestner  <mkestner@novell.com>
