@@ -1,3 +1,8 @@
+2006-08-10  Mike Kestner  <mkestner@novell.com>
+
+	* parser/gapi2xml.pl : class parsing regex needs to handle protected
+	comments too.
+
 2006-08-07  Mike Kestner  <mkestner@novell.com>
 
 	* gtk/Gtk.metadata : remainder of new API massaging for existing 
